infra/vpc.tf
data "aws_availability_zones" "azs" { state = "available" }

resource "aws_vpc" "this" {
  cidr_block = "10.50.0.0/16"
  enable_dns_hostnames = true
  enable_dns_support = true
  tags = { Name = "${var.project}-vpc" }
}

locals { azs = [0,1] }

resource "aws_subnet" "public" {
  for_each = toset(local.azs)
  vpc_id = aws_vpc.this.id
  cidr_block = cidrsubnet(aws_vpc.this.cidr_block, 8, each.key)
  availability_zone = data.aws_availability_zones.azs.names[each.key]
  map_public_ip_on_launch = true
  tags = { Name = "${var.project}-public-${each.key}" }
}

resource "aws_internet_gateway" "igw" { vpc_id = aws_vpc.this.id }

resource "aws_route_table" "public" {
  vpc_id = aws_vpc.this.id
  route { cidr_block = "0.0.0.0/0"; gateway_id = aws_internet_gateway.igw.id }
}

resource "aws_route_table_association" "public_assoc" {
  for_each = aws_subnet.public
  subnet_id = each.value.id
  route_table_id = aws_route_table.public.id
}
